--- a/index.html
+++ b/index.html
@@ -16,6 +16,116 @@
     <title>Bootstrap</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+        <!-- RIGA 1 -->
+            <div class="row justify-content-between align-items-center">
+                <div class="col-auto"></div>
+                <div class="col-auto col-md-3"></div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="container">
+            <!-- RIGA 2 -->
+            <div class="row justify-content-center">
+                <div class="col-6">img</div>
+                <div class="col-8">text img</div>
+                <div class="col-5">stars img</div>
+                <div class="col-9">
+                    <div class="row justify-content-between">
+                        <div class="col-auto">graphh</div>
+                        <div class="col-auto">graphh</div>
+                        <div class="col-auto">graphh</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="portfolio">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-6">portfolio</div>
+                    <div class="col-8">star img</div>
+                </div>
+            </div>
+            <section class="porfolio">
+                <div class="container">
+                    <div class="row row-cols-1 justify-content-center">
+                        <div class="col">Portfolio</div>
+                        <div class="col">stars img</div>
+                    </div>
+                    <div class="row row-sm-cols-1 row-md-cols-2 row-lg-cols-3justify-content-center">
+                        <div class="col-sm-12 col-md-6 col-lg-4">img portfolio</div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">img portfolio</div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">img portfolio</div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">img portfolio</div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">img portfolio</div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">img portfolio</div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="about">
+                <div class="container">
+                    <div class="row row-cols-1 justify-content-center">
+                        <div class="col">about</div>
+                        <div class="col">stars imgs</div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-7 col-md-6">text about</div>
+                        <div class="col-7 col-md-6">text about</div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-auto">download</div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="address">
+                <div class="container">
+                    <div class="row row-cols-1 justify-content-center">
+                        <div class="col">contancts</div>
+                        <div class="col">stars img</div>
+                    </div>
+
+                    <div class="row row-cols-1">
+                        <div class="col">name</div>
+                        <div class="col">surname</div>
+                        <div class="col">text</div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="info">
+                <div class="container">
+                    <div class="row row-cols-1 row-md-cols-3">
+                        <div class="col">
+                            <div class="row row-cols-1 justify-content-center">
+                                <div class="col">location</div>
+                                <div class="col">indr.post.</div>
+                            </div>
+                            <div class="row row-cols-1 justify-content-center">
+                                <div class="col">around the web</div>
+                                <div class="col">img social</div>
+                            </div>
+                            <div class="row row-cols-1 justify-content-center">
+                                <div class="col">around freelance</div>
+                                <div class="col">freelance text</div>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+           
+
+
+        </section>
+    </main>
+
     
 </body>
 </html>
