--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="container green">
             <!-- RIGA 2 -->
             <div class="row justify-content-center">
                 <div class="col-6">img</div>
@@ -67,7 +67,7 @@
             </section>
 
             <section class="about">
-                <div class="container">
+                <div class="container green">
                     <div class="row row-cols-1 justify-content-center">
                         <div class="col">about</div>
                         <div class="col">stars imgs</div>
@@ -113,18 +113,21 @@
                                 <div class="col">around freelance</div>
                                 <div class="col">freelance text</div>
                             </div>
-
-
                         </div>
-
                     </div>
                 </div>
             </section>
-           
-
-
         </section>
     </main>
+
+    <footer>
+        <div class="container green">
+            <div class="row row-cols-1 justify-content-center align-items-center">
+                <div class="col-5">copyright</div>
+            </div>
+        </div>
+
+    </footer>
 
     
 </body>
